Fixing the Roles Pop Viewer